# querystudio

./: .gitignore  .issues  AGENTS.md  Cargo.toml  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  index.html  package-lock.json  package.json  string.txt  theme.schema.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release-and-build.yml
.zed/: settings.json
crates/ai/: Cargo.toml
crates/ai/src/: agent.rs  lib.rs  tools.rs  types.rs
crates/ai/src/providers/: anthropic.rs  copilot.rs  gemini.rs  mod.rs  openai.rs  vercel.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs
docs/: package.json  vite.config.ts
docs/content/docs/: ai-crate-contributing.mdx  custom-themes.mdx  index.mdx
docs/src/lib/: layout.shared.tsx
docs/src/routes/: __root.tsx  index.tsx
docs/src/routes/docs/: $.tsx
license_api/: .env.example  package.json
license_api/src/: env.ts  index.ts  polar.ts
license_api/src/routes/: license.ts
src/: main.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_commands.rs  database.rs  fonts.rs  keychain.rs  lib.rs  license.rs  main.rs  queries.rs  settings.rs  storage.rs  terminal.rs
src-tauri/src/ai/: agent.rs  mod.rs  tools.rs
src-tauri/src/ai/providers/: gemini.rs  mod.rs  openrouter.rs  vercel.rs
src-tauri/src/providers/: mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs
src/components/: add-redis-key-dialog.tsx  add-row-sheet.tsx  ai-chat.tsx  ai-settings-modal.tsx  app-settings.tsx  command-palette.tsx  connection-dialog.tsx  connection-palette.tsx  connection-tabs.tsx  edit-connection-dialog.tsx  edit-row-sheet.tsx  fps-counter.tsx  imported-plugin-placeholder.tsx  license-screen.tsx  pane-container.tsx  pane-welcome-screen.tsx  password-prompt-dialog.tsx  plugin-settings.tsx  query-editor.tsx  redis-console.tsx  redis-db-selector.tsx  redis-key-inspector.tsx  redis-slowlog.tsx  sidebar.tsx  status-bar.tsx  tab-bar.tsx  table-viewer.tsx  terminal-panel.tsx  terminal-tab-content.tsx  terminal.tsx  theme-selector.tsx  welcome-screen.tsx
src/components/ui/: dialog.tsx  provider-icon.tsx  sonner.tsx
src/hooks/: use-auth-deep-link.ts  use-update-checker.ts
src/lib/: ai-agent.ts  api.ts  app-font.ts  app-ui-scale.ts  auth-client.tsx  connection-secrets.ts  hooks.ts  layout-store.ts  local-plugins.ts  model-config.ts  plugin-sdk.ts  plugin-store.ts  redis-commands.ts  settings-api.ts  settings-schema.ts  settings-store.ts  settings-window.ts  storage.ts  store.ts  tab-sdk.ts  terminal-store.ts  terminal-theme.ts  theme-store.ts  themes.ts  types.ts  use-global-shortcuts.ts  use-theme-export.ts  use-theme-import.ts  utils.ts
src/plugins/: README.md  data-export.tsx  data-generator.tsx  index.ts  mock-data-generator.tsx  sql-formatter.tsx  theme-generator.tsx
src/routes/: __root.tsx  db.$connectionId.tsx  db.tsx  edit-connection.$connectionId.tsx  index.tsx  new-connection.tsx  settings.tsx
src/themes/: catppuccin.json  dark.json  default.json  github-dark.json  onedark.json  rose-pine.json  tokyonight.json  vesper.json
web/: README.md  drizzle.config.ts  package.json  railway.json  server.ts  userjot-feedback.js  vite.config.ts
web/drizzle/: index.ts
web/drizzle/migrations/: 0000_illegal_gwen_stacy.sql  0001_colorful_skin.sql  0002_loving_wendell_vaughn.sql  0003_funny_miss_america.sql  0006_slim_mercury.sql  0007_silly_power_man.sql  0009_confused_dragon_man.sql  0010_burly_gideon.sql
web/drizzle/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  _journal.json
web/drizzle/schema/: auth.ts  device.ts
web/src/: routeTree.gen.ts  styles.css  vite-env.d.ts
web/src/components/: header.tsx  optimized-video.tsx  page-transition.tsx
web/src/components/ui/: sonner.tsx  spinner.tsx  tabs.tsx
web/src/emails/: verify-email.tsx  waitlist-joined.tsx  waitlist-status.tsx
web/src/lib/: auth-client.ts  auth.tsx  emailer.ts  env.ts  polar.ts  ratelimit.ts  realtime.ts
web/src/routes/: __root.tsx  _authed.tsx  api.auth.$.ts  api.downloads.$.ts  api.license.$.ts  api.license.ts  api.polar.webhooks.ts  changelog.tsx  download.tsx  index.tsx  login.tsx  pricing.tsx  privacy.tsx  signup.tsx  status.tsx  terms.tsx  waitlist.tsx
web/src/routes/_authed/: dashboard.tsx
web/src/routes/_authed/dashboard/: account.tsx  admin.tsx  billing.tsx  devices.tsx  index.tsx  security.tsx
web/src/routes/api/: realtime.ts  test.ts
web/src/routes/auth/: desktop.tsx
web/src/server/: auth.ts  billing.ts  devices.ts  pricing.ts
web/src/server/middleware/: ratelimit.ts
