[package]
name = "querystudio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "querystudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
machine-uid = "0.5"
hostname = "0.4"
tauri-plugin-process = "2"
portable-pty = "0.8"
sysinfo = "0.30"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
querystudio-providers = { path = "../crates/providers" }
querystudio-ai = { path = "../crates/ai" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
